syntax = "proto3";

option php_namespace = "Proto\\BreedService";
option php_metadata_namespace = "Proto\\Metadata";

package BreedServicePackage;

service BreedService { 
  rpc GetBreeds (GetBreedsRequest) returns (GetBreedsResponse);
  rpc GetBreed (GetBreedRequest) returns (GetBreedResponse);
  rpc CreateBreed (CreateBreedRequest) returns (CreateBreedResponse);
  rpc UpdateBreed (UpdateBreedRequest) returns (UpdateBreedResponse);
  rpc DeleteBreed (DeleteBreedRequest) returns (DeleteBreedResponse);
}
// Requests
message GetBreedsRequest {
   repeated Filter filter = 1;
}
message GetBreedRequest {
   int32 id = 1;
}
message CreateBreedRequest {
   TemplateBreed breed = 1;
}
message UpdateBreedRequest {
   TemplateBreed breed = 2;
}
message DeleteBreedRequest {
    int32 id = 1;
}
// Responses
message GetBreedsResponse {
   repeated TemplateBreed breeds = 1;
   int32 response_code = 2;
}
message GetBreedResponse {
    TemplateBreed breed = 1;
    int32 response_code = 2;
}       
message CreateBreedResponse {
   TemplateBreed breed = 1;
   int32 response_code = 2;
}
message UpdateBreedResponse {
   TemplateBreed breed = 1;
    int32 response_code = 2;   
}
message DeleteBreedResponse {
   bool success = 1;
   int32 response_code = 2;
}
// Breed message
message TemplateBreed {
   optional int32 id = 1;
   int32 species_id = 2;
   string name = 3;
   optional int32 lifespan = 4;
   optional string description = 5;
   bool can_create_batch = 6;
   bool status = 7;
   
   TemplateSpecies species = 8;
}
message Filter {
   string key = 1;
   string value = 2;
}
message TemplateSpecies {
   optional int32 id = 1;
   string name = 2;
   optional string scientific_name = 3;
   optional string description = 4;
   bool status = 5;
}